Spacing issues fixed

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -11,6 +11,8 @@
 }
 
 .headerMain {
+    display: flex;
+    justify-content:space-between;
     height: 75px;
     background-color: black;
     border-top: white 2px solid;
@@ -18,10 +20,15 @@
     border-left: white 2px solid;
 }
 
+.headerMainXXX {
+    display: flex;
+    justify-content:end;
+}
+
 .buttonBox {
     display: flex;
     justify-content: end;
-    align-items: center;
+    align-items: start;
 }
 
 .menuToggleBtn {
